--- a/index.html
+++ b/index.html
@@ -1,9 +1,127 @@
+<!DOCTYPE html>
 <html>
-
+<head>
+    <title>Your Name - CV</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        header {
+            background: #333;
+            color: white;
+            padding-top: 30px;
+            min-height: 70px;
+            border-bottom: #bbb 1px solid;
+        }
+        header a {
+            color: #fff;
+            text-decoration: none;
+            text-transform: uppercase;
+            font-size: 16px;
+        }
+        header ul {
+            padding: 0;
+            list-style: none;
+            text-align: center;
+        }
+        header li {
+            display: inline;
+            margin: 0 20px 0 20px;
+        }
+        section {
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+        .professional-experience, .certifications, .tech-skills {
+            background: #f4f4f4;
+            padding: 10px;
+            margin-top: 20px;
+        }
+    </style>
+</head>
 <body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+    <header>
+        <div class="container">
+            <h1>Your Name - Curriculum Vitae</h1>
+        </div>
+    </header>
 
+    <section class="personal-information container">
+        <h2>Personal Information</h2>
+        <p>Name: [Your Full Name]</p>
+        <p>Email: [Your Email]</p>
+        <p>LinkedIn: [LinkedIn Profile]</p>
+        <!-- You can add more personal details here -->
+    </section>
+
+    <section class="professional-summary container">
+        <h2>Professional Summary</h2>
+        <p>[Your professional summary here]</p>
+    </section>
+
+    <section class="tech-skills container">
+        <h2>Tech Skills</h2>
+        <ul>
+            <li>Azure IaaS & PaaS</li>
+            <li>Active Directory (ADDS)</li>
+            <!-- Add more skills here -->
+        </ul>
+    </section>
+
+    <section class="certifications container">
+        <h2>Certifications</h2>
+        <ul>
+            <li>[Certification Name]</li>
+            <!-- Add more certifications here -->
+        </ul>
+    </section>
+
+    <section class="professional-experience container">
+        <h2>Professional Experience</h2>
+        <div class="job">
+            <h3>[Job Title] - [Company Name]</h3>
+            <p class="date">[Start Date] - [End Date]</p>
+            <ul>
+                <li>[Responsibility or Achievement #1]</li>
+                <li>[Responsibility or Achievement #2]</li>
+                <!-- Add more responsibilities or achievements here -->
+            </ul>
+        </div>
+
+        <div class="job">
+            <h3>[Job Title] - [Company Name]</h3>
+            <p class="date">[Start Date] - [End Date]</p>
+            <ul>
+                <li>[Responsibility or Achievement #1]</li>
+                <li>[Responsibility or Achievement #2]</li>
+                <!-- Add more responsibilities or achievements here -->
+            </ul>
+        </div>
+
+        <div class="job">
+            <h3>[Job Title] - [Company Name]</h3>
+            <p class="date">[Start Date] - [End Date]</p>
+            <ul>
+                <li>[Responsibility or Achievement #1]</li>
+                <li>[Responsibility or Achievement #2]</li>
+                <!-- Add more responsibilities or achievements here -->
+            </ul>
+        </div>
+        <!-- Duplicate the above 'job' div block for each of your professional experiences -->
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>Curriculum Vitae - [Your Name]</p>
+        </div>
+    </footer>
+</body>
 </html>
